--- a/GUI/ether/package.json
+++ b/GUI/ether/package.json
@@ -1,26 +1,21 @@
 {
-  "name": "install",
+  "name": "ether",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "browserify": "^17.0.0",
-    "crypto": "^1.0.1",
-    "crypto-browserify": "^3.12.0",
-    "install": "^0.13.0",
-    "os-browserify": "^0.3.0",
-    "package.json": "^2.0.1",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.14",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@usedapp/core": "^0.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "stream": "^0.0.2",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "web-vitals": "^2.1.2",
-    "web3": "^1.6.1",
-    "web3-eth": "^1.6.1"
+    "typescript": "^4.5.4",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
